manifests/values/example-04/2-prometheus-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    cert-manager.io/issuer: letsencrypt-http01-staging
spec:
  ingressClassName: external-nginx
  tls:
    - hosts:
        - monitoring.msb-hub.io
      secretName: prometheus-msb-hub-key-pair
  rules:
    - host: monitoring.msb-hub.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-operated
                port:
                  number: 9090
